plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.99'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id
// Add your repositories here
repositories {
    maven {
        name = "CurseMaven"
        url = "https://www.cursemaven.com"
        content { includeGroup "curse.maven" }
    }
    maven {
        name = "henkelmax.public"
        url = 'https://maven.maxhenkel.de/repository/public'
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
        content { includeGroup "maven.modrinth" }
    }
    maven {
        name = 'SpongePowered'
        url = 'https://repo.spongepowered.org/maven/'
    }
    maven {
        name = "plasmoverse-releases"
        url = "https://repo.plasmoverse.com/releases"
    }
    flatDir {
        dirs 'libs'
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }




    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            
            systemProperty "mixin.config", "soundattract.mixins.json,soundattract.pointblank.mixins.json"
            systemProperty "mixin.env.remapRefMap", "true"
            systemProperty "mixin.debug.verbose", "true"
            systemProperty "mixin.debug.export", "true"
            systemProperty "mixin.debug.verify", "true"
            systemProperty "mixin.debug.countInjections", "true"
            systemProperty "mixin.checks", "true"
            systemProperty "mixin.dumpTargetOnFailure", "true"
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            
            systemProperty "mixin.config", "soundattract.mixins.json,soundattract.pointblank.mixins.json"
            systemProperty "mixin.env.remapRefMap", "true"
            systemProperty "mixin.debug.verbose", "true"
            systemProperty "mixin.debug.export", "true"
            systemProperty "mixin.debug.verify", "true"
            systemProperty "mixin.debug.countInjections", "true"
            systemProperty "mixin.checks", "true"
            systemProperty "mixin.dumpTargetOnFailure", "true"
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

configurations.all {
    resolutionStrategy {
        force 'com.google.guava:guava:32.1.2-jre'
        force 'com.google.guava:failureaccess:1.0.1'
    }
}

dependencies {
    compileOnly "de.maxhenkel.voicechat:voicechat-api:neoforge-1.20.1-2.5.30"
    compileOnly "de.maxhenkel.voicechat:voicechat-api:2.5.31"
    compileOnly files('libs/tacz-neoforge-1.21.1-1.1.6-hotfix-r4.jar')
    compileOnly "su.plo.voice.api:server:2.1.5"
    compileOnly "su.plo.voice.api:client:2.1.5"
    localRuntime "curse.maven:simple-voice-chat-416089:6439546"
    compileOnly "curse.maven:vics-point-blank-961053:6028992"
    localRuntime "curse.maven:vics-point-blank-961053:6028992"
    
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version_range: project.minecraft_version_range,
            neo_version            : project.neo_version,
            loader_version_range   : project.loader_version_range,
            mod_id                 : project.mod_id,
            mod_name               : project.mod_name,
            mod_license            : project.mod_license,
            mod_version            : project.mod_version,
            mod_authors            : project.mod_authors,
            mod_description        : project.mod_description
    ]
    inputs.properties replaceProperties

    filesMatching('META-INF/neoforge.mods.toml') {
        expand(replaceProperties)
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}